welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:3: error: type mismatch;
 found   : Unit
 required: Boolean
     if ( ( a>=30 && a<=40 && b>=30 && b<=40 ) || (a>=40 && a<=450 && b>=340 && b<=50 ) ) {
     ^