welcome.lessons.welcome.bat.bool1.In3050.scala.code
def in3050(a:Int, b:Int):Boolean = {

     if ( ( a>=30 && a<=40 && b>=30 && b<=40 ) || (a>=40 && a<=450 && b>=340 && b<=50 ) ) {
     	return true
     }
     
}
